--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">the reminder</string>
+    <string name="aboutUs">برمجة حسان الرحيلي- ثانوية دار الابرار
+             تحت اشراف النشاط الطلابي- الاستاذ ماجد الرويتعي
+             مدير المدرسة- عبدالعزيز الصاعدي</string>
+
 </resources>
