--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">the reminder</string>
+    <string name="app_name">المُذَكِّرْ</string>
     <string name="aboutUs">برمجة حسان الرحيلي- ثانوية دار الابرار
              تحت اشراف النشاط الطلابي- الاستاذ ماجد الرويتعي
              مدير المدرسة- عبدالعزيز الصاعدي</string>
